# hw13

./: CMakeLists.txt  Doxyfile  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_files_23_821_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_lists_8txt.html  _map_8cpp.html  _map_8cpp_8o_8d.html  _map_8cpp__incl.map  _map_8cpp__incl.md5  _map_8h.html  _map_8h__dep__incl.map  _map_8h__dep__incl.md5  _map_8h__incl.map  _map_8h__incl.md5  _map_8h_source.html  _r_e_a_d_m_e_8md.html  _reduce_8cpp.html  _reduce_8cpp_8o_8d.html  _reduce_8cpp__incl.map  _reduce_8cpp__incl.md5  _reduce_8h.html  _reduce_8h__dep__incl.map  _reduce_8h__dep__incl.md5  _reduce_8h__incl.map  _reduce_8h__incl.md5  _reduce_8h_source.html  _shuffle_8h.html  _shuffle_8h__dep__incl.map  _shuffle_8h__dep__incl.md5  _shuffle_8h__incl.map  _shuffle_8h__incl.md5  _shuffle_8h_source.html  _split_8cpp.html  _split_8cpp_8o_8d.html  _split_8cpp__incl.map  _split_8cpp__incl.md5  _split_8h.html  (+120 more)
inc/: Map.h  Reduce.h  Shuffle.h  Split.h  Task.h  classifier.h  helpers.cpp  helpers.h  logreg_classifier.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+23 more)
(+6 files in other folders)
